Fixing Image source path again

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
         <img
           class="quote-divider"
-          src="images/pattern-divider-mobile.svg"
+          src="./images/pattern-divider-mobile.svg"
           alt=""
         />
 
         <div class="circle">
-          <img class="dice" src="images/icon-dice.svg" alt="" />
+          <img class="dice" src="./images/icon-dice.svg" alt="" />
         </div>
       </div>
     </div>
